[tool.poetry]
name = "lowlevelapp"
version = "0.1.0"
description = ""
authors = ["AnatoliAgeichik <3anatoliageichik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
pre-commit = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
